--- a/vignettes/CSP_AQOL6D_TTU.Rmd
+++ b/vignettes/CSP_AQOL6D_TTU.Rmd
@@ -10,7 +10,8 @@ vignette: >
 \blandscape
 <!---BLOCK_LANDSCAPE_START--->
 
-This vignette is an example of implementing of analysis, reporting and sharing workflow to develop transfer to AQoL-6D health utility models. Some of the initial steps in this example are described in more detail in the [EQ-5D example](CSP_EQ5D_TTU.html).
+This vignette is an example of implementing of analysis, reporting and sharing workflow to develop transfer to AQoL-6D health utility models. Some of the initial steps in this example are described in more detail in the [EQ-5D example](CSP_EQ5D_TTU.html). This example uses entirely fake data (so do not use its outputs to inform decision making) but was based on a method that was applied to real data (see https://www.medrxiv.org/content/10.1101/2021.07.07.21260129v2.full).
+
 ```{r echo = TRUE, message=FALSE}
 library(TTU)
 ```
@@ -168,20 +169,28 @@ input_params_ls <- make_study_descs_ls(input_params_ls = input_params_ls,
                                                                                           "GAD-7")))
 ```
 
-We can now pass the updated input parameters list to the `write_manuscript` function. This will produce an initial  draft of a scientific manuscript (detailed methods and results, a basic introduction and no discussion).  When running this command yourself you can discover where the manuscript has been saved locally on your machine by printing the object `results_ls$path_params_ls$paths_ls$reports_dir_1L_chr`. If (AND ONLY IF), you are sure that you will never develop the manuscript further with a view to future publication, you can add this automatically generated draft to the study dataset by adding `write_to_dv_1L_lgl = T` to the function call (as below). The document exported to the dataset by the following call is accessible at: https://dataverse.harvard.edu/api/access/datafile/4933736 (it is in ".dovx" format as we specified "Word" as our desired output format (see earlier in the workflow)).
+We can now pass the updated input parameters list to the `write_manuscript` function. This will produce an initial draft of a scientific manuscript (detailed methods and results, a basic introduction and no discussion), by first downloading an extension to the TTU package (https://github.com/ready4-dev/ttu_lng_ss).  If (AND ONLY IF), you are sure that you will never develop the manuscript further with a view to future publication, you can add this automatically generated draft to the study dataset by adding `write_to_dv_1L_lgl = T` to the function call (as below). 
 ```{r eval = F}
 results_ls <- write_manuscript(input_params_ls = input_params_ls,
                                write_to_dv_1L_lgl = T)
 ```
+The document exported to the dataset by the preceding call is accessible at: https://dataverse.harvard.edu/api/access/datafile/4933736 (it is in ".docx" format as we specified "Word" as our desired output format (see earlier in the workflow)). You can override the output format specified in the input parameter list object by using the `output_type_1L_chr` argument.
+```{r eval = F}
+write_manuscript(results_ls = results_ls,
+                 write_to_dv_1L_lgl = T,
+                 output_type_1L_chr = "PDF")
+```
 
-If you do wish to develop the manuscript into something you will submit for publication, there are two options for doing so:
+The PDF version is available at: https://dataverse.harvard.edu/api/access/datafile/4935022 .When running the `write_manuscript` function, you can discover the directory into which the manuscript has been saved locally on your machine by printing the object `results_ls$path_params_ls$paths_ls$reports_dir_1L_chr`.
 
-- If your planned submission format is PDF or LaTeX, edit the markdown files (printing object `results_ls$path_params_ls$paths_ls$path_to_ms_mkdn_1L_dir` will tell you where these have been saved) and run `write_manuscript(input_params_ls = input_params_ls)` again. This maintains the reproducibility of the workflow, but has higher skills requirements.
+If you wish to develop the manuscript into something you will submit for publication, there are two options for doing so:
 
-- If your planned submission format is Word, you can just edit the word document rendered by the `write_manuscript` function. This is relatively straightforward, though  unlike the PDF output, you will need to manually edit some of the secion numbering and table headings. 
+- If your planned submission format is PDF or LaTeX, edit the markdown files (printing object `results_ls$path_params_ls$paths_ls$path_to_ms_mkdn_1L_dir` will tell you where these have been saved) and run `write_manuscript(results_ls = results_ls, output_type_1L_chr = "PDF")`. Both PDF and TeX files are saved as a result of this command.
+
+- If your planned submission format is Word, you can just edit the word document rendered by the `write_manuscript` function. This is relatively straightforward, though  unlike the PDF output, you will need to manually edit some of the section numbering and table formatting / headings. 
 
 # Purge dataset copies
-All remaining local copies (but not the original version) of the study dataset are deleted from the workspace.
+As a final step, it is important to delete all local copies (but not the original version) of the study dataset that were produced during the analysis.
 
 ```{r echo = TRUE, eval=FALSE }
 write_to_delete_ds_copies(path_params_ls$paths_ls)
