--- a/vignettes/CSP_AQOL6D_TTU.Rmd
+++ b/vignettes/CSP_AQOL6D_TTU.Rmd
@@ -23,9 +23,32 @@ library(TTU)
 ### Bibliograhic data
 We begin by specifying the authorship and other bibliographic data that we wish to attach to all reports that we generate.
 
+We begin by specifying the authorship data we wish to attach to all reports that we generate.
+
+```{r }
+authors_tb <- ready4show::authors_tb
+```
+```{r authorsds, eval = knitr::is_html_output(), echo=F, results='asis'}
+authors_tb %>%
+  ready4show::print_table(output_type_1L_chr = "HTML",
+                          caption_1L_chr = "Authors table",
+                          mkdn_tbl_ref_1L_chr = "tab:authorsds")
+```
 ```{r}
-header_yaml_args_ls <- make_header_yaml_args_ls(authors_tb = ready4show::authors_tb,
-                                                institutes_tb = ready4show::institutes_tb,
+institutes_tb <- ready4show::institutes_tb
+```
+```{r institutesds, eval = knitr::is_html_output(), echo = F,results='asis'}
+institutes_tb %>%
+  ready4show::print_table(output_type_1L_chr = "HTML",
+                          caption_1L_chr = "Author institutions table",
+                          mkdn_tbl_ref_1L_chr = "tab:institutesds")
+```
+
+We combine the data about authors with other bibliographic information.
+
+```{r}
+header_yaml_args_ls <- make_header_yaml_args_ls(authors_tb = authors_tb,
+                                                institutes_tb = institutes_tb,
                                                 title_1L_chr = "A hypothetical study using fake data for instructional purposes only",
                                                 keywords_chr = c("this","is","a","replication","using","fake","data","do", "not","cite"))
 ```
@@ -50,6 +73,33 @@ ds_tb <- youthvars::replication_popl_tb %>%
             youthvars::transform_raw_ds_for_analysis() 
 ```
 
+The first few records of the dataset are as follows.
+
+```{r inputds, echo=F, eval = knitr::is_html_output(), results='asis'}
+ds_tb %>%
+    head() %>%
+  ready4show::print_table(output_type_1L_chr = "HTML",
+                          caption_1L_chr = "Input dataset",
+                          mkdn_tbl_ref_1L_chr = "tab:inputds")
+```
+
+### Data dictionary
+A data dictionary must also be supplied for the dataset. The dictionary must be of class `ready4_dictionary` from the `ready4use` package.
+
+```{r}
+dictionary_tb <- youthvars::make_final_rpln_ds_dict()
+```
+
+The data dictionary is reproduced below.
+
+```{r dictionary, echo=F, eval = knitr::is_html_output(), results='asis'}
+dictionary_tb %>%
+  ready4show::print_table(output_type_1L_chr = "HTML",
+                          caption_1L_chr = "Data dictionary",
+                          mkdn_tbl_ref_1L_chr = "tab:dictionary")
+```
+
+
 ### Dataset metadata
 We describe the features of our dataset that are most relevant to the analyses we are planning to undertake. 
 
@@ -64,7 +114,7 @@ ds_descvs_ls <- make_ds_descvs_ls(candidate_predrs_chr = c("K6","PHQ9"),#
                                                                "d_studying_working",
                                                                "c_p_diag_s","c_clinical_staging_s",
                                                                "SOFAS"),
-                                  dictionary_tb = youthvars::make_final_rpln_ds_dict(), 
+                                  dictionary_tb = dictionary_tb, 
                                   id_var_nm_1L_chr = "fkClientID", 
                                   is_fake_1L_lgl = T,
                                   msrmnt_date_var_nm_1L_chr = "d_interview_date",
@@ -96,7 +146,7 @@ predictors_lup <- make_pt_TTU_predictors_lup(short_name_chr = c(ds_descvs_ls$can
 ## Analysis parameters
 
 ### Multi-Attribute Utility Instrument (MAUI) parameters
-We also need to provide information specific to the MAUI used to collect the data from which health utility will be derived.
+We also need to provide information specific to the MAUI used to collect the data from which health utility will be derived. The minimum allowable health utility weight for this instrument can be declared using the `utl_min_val_1L_dbl` argument.
 
 ```{r}
 maui_params_ls <- make_maui_params_ls(maui_domains_pfcs_1L_chr = "vD",
@@ -107,8 +157,6 @@ maui_params_ls <- make_maui_params_ls(maui_domains_pfcs_1L_chr = "vD",
                                       utl_min_val_1L_dbl = 0.03)
 ```
 
-## Path parameters
-We next create an object that specifies the relative locations of the input data and the intended destination for analysis outputs and reports. The default settings of the `make_path_params_ls` function will write all output into a new directory, created one level up from the current working directory.
 
 ## Analysis parameters
 We can now create a list of input parameters using the `make_input_params` function, principally using the objects created in the preceding steps. We can force the use of specified model types or covariates (rather than allowing the analysis algorithm to select these based on automated criteria) by using the `prefd_mdl_types_chr` and `prefd_covars_chr` arguments. We can also specify how we want to adapt our primary analysis input parameters for secondary analyses (e.g. that use different combinations of candidate predictors and covariates) using the `scndry_anlys_params_ls ` argument in conjunction with the `make_scndry_anlys_params` function. If you have created an empty dataverse dataset to post results to, assign the DOI for your dataset and the name of the dataverse containing it to the `dv_ds_nm_and_url_chr` argument (these values will be unique to you and different to those below, which will not work for you). If you do not wish to post results to a dataverse dataset, set `dv_ds_nm_and_url_chr = NULL`. The `make_input_params` function performs a number of checks relating to the naming conventions used in some variables of interest and where necessary (for consistency with reporting templates) modifies the names of these variables.
@@ -131,7 +179,7 @@ input_params_ls <- make_input_params(ds_tb,
 
 # Run analysis
 All analytic steps for our primary and secondary analyses are executed with the following function call. Note, this step can involve long execution times (potentially over an hour, depending on the input parameters).
-```{r}
+```{r eval=FALSE}
 write_analyses(input_params_ls)
 ```
 
@@ -155,7 +203,7 @@ The `write_study_outp_ds` function writes its outputs to a draft dataset - which
 # Create manuscript
 The first step to creating a manuscript that provides the scientific summary of the study is to add some metadata about the study itself to our parameters list, using the `make_study_descs_ls` function. If you want the manuscript to refer to some of the candidate predictors by different names than that provided in the `short_name_chr` column of the `predictors_lup` object defined earlier, you can create a table of name correspondences and pass it to the `var_nm_change_lup` argument.
 
-```{r}
+```{r eval = F}
 input_params_ls <- make_study_descs_ls(input_params_ls = input_params_ls,
                                        background_1L_chr = "Our study is entirely fictional and has been created to illustrate TTU package functionality.",
                                        coi_1L_chr = "None declared.",
@@ -170,11 +218,14 @@ input_params_ls <- make_study_descs_ls(input_params_ls = input_params_ls,
 ```
 
 We can now pass the updated input parameters list to the `write_manuscript` function. This will produce an initial draft of a scientific manuscript (detailed methods and results, a basic introduction and no discussion), by first downloading an extension to the TTU package (https://github.com/ready4-dev/ttu_lng_ss).  If (AND ONLY IF), you are sure that you will never develop the manuscript further with a view to future publication, you can add this automatically generated draft to the study dataset by adding `write_to_dv_1L_lgl = T` to the function call (as below). 
+
 ```{r eval = F}
 results_ls <- write_manuscript(input_params_ls = input_params_ls,
                                write_to_dv_1L_lgl = T)
 ```
-The document exported to the dataset by the preceding call is accessible at: https://dataverse.harvard.edu/api/access/datafile/4933736 (it is in ".docx" format as we specified "Word" as our desired output format (see earlier in the workflow)). You can override the output format specified in the input parameter list object by using the `output_type_1L_chr` argument.
+
+The document exported to the dataset by the preceding call is accessible at: https://dataverse.harvard.edu/api/access/datafile/4935036 (it is in ".docx" format as we specified "Word" as our desired output format (see earlier in the workflow)). You can override the output format specified in the input parameter list object by using the `output_type_1L_chr` argument. Note, that this time around we are using the `results_ls` object as the main input as this object was automatically saved (to the directory path stored in `results_ls$path_params_ls$paths_ls$output_data_dir_1L_chr`) by the preceding call.
+
 ```{r eval = F}
 write_manuscript(results_ls = results_ls,
                  write_to_dv_1L_lgl = T,
