--- a/vignettes/CSP_EQ5D_TTU.Rmd
+++ b/vignettes/CSP_EQ5D_TTU.Rmd
@@ -168,10 +168,13 @@ input_params_ls <- make_study_descs_ls(input_params_ls = input_params_ls,
                                        time_btwn_bl_and_fup_1L_chr = "four months")
 ```
 
+When rendering the draft manuscript, we have opted in this example to also upload it to our dataset (`write_to_dv_1L_lgl = T`). This is not recommended if you plan to further develop the draft into an article for publication.
+
 ```{r eval = F}
 results_ls <- write_manuscript(input_params_ls = input_params_ls,
                                write_to_dv_1L_lgl = T)
 ```
+The draft manuscript created by the previous call is available at: https://dataverse.harvard.edu/api/access/datafile/4937713 .
 
 # Purge dataset copies
 All remaining local copies (but not the original version) of the study dataset are deleted from the workspace.
